# ARIEL

./: .gitignore  .gitmodules  LICENSE.md  README.md  build-and-install.sh  run-tests.sh
buildtools/example/: CMakeLists.txt
cmake/: CMakeLists.txt
cmake/Modules/: ArielCreateModulesfiles.cmake  ArielCreateSetup.cmake
cmake/templates/: ariel.in  root.in  setup.sh.in  workbook.in
cmake/ups/: product_deps
examples/toyExperiment/: CMakeLists.txt
examples/toyExperiment/admin/: CMakeLists.txt  check_inputFiles_symlink  check_inputFiles_symlink.in  check_outputDir
examples/toyExperiment/scripts/: CMakeLists.txt  browse
examples/toyExperiment/toyExperiment/: CMakeLists.txt
examples/toyExperiment/ups/: product-config.cmake.in  product_deps
examples/workbook/: CMakeLists.txt  README.md
examples/workbook/admin/: CMakeLists.txt  check_fcl_symlink  check_inputFiles_symlink  check_outputDir_symlink.in
examples/workbook/art-workbook/: CMakeLists.txt
examples/workbook/ups/: product_deps  setup_for_development
src/art_root_io/art_root_io/: CMakeLists.txt  DropMetaData.cc  DropMetaData.h  DuplicateChecker.cc  DuplicateChecker.h  FastCloningInfoProvider.cc  FastCloningInfoProvider.h  GetFileFormatEra.cc  GetFileFormatEra.h  GetFileFormatVersion.cc  GetFileFormatVersion.h  Inputfwd.h  RootBranchInfo.cc  RootBranchInfo.h  RootBranchInfoList.cc  RootBranchInfoList.h  RootDelayedReader.cc  RootDelayedReader.h  RootFileBlock.h  RootIOPolicy.cc  RootIOPolicy.h  RootInput.h  RootInputFile.cc  RootInputFile.h  RootInputFileSequence.cc  RootInputFileSequence.h  RootInput_source.cc  RootOutputFile.cc  RootOutputFile.h  RootOutputTree.cc  RootOutputTree.h  RootOutput_module.cc  RootSizeOnDisk.cc  RootSizeOnDisk.h  SamplingInput_source.cc  TFileDirectory.cc  TFileDirectory.h  TFileService.h  TFileService_service.cc  checkDictionaries.cc  (+9 more)
src/canvas/: CMakeLists.txt
src/canvas/canvas/: CMakeLists.txt
src/canvas/doc/: Assns-read.pu  PLUGIN_NOTES.txt  Ptr-Assns-threading.md  Ptr-lifecycle.pu  assnsdefs.ipu  defs.ipu  ptrdefs.ipu
src/canvas/tools/: CMakeLists.txt
src/canvas/ups/: product_deps
src/canvas_root_io/: CMakeLists.txt  README
src/canvas_root_io/Modules/: ArtDictionary.cmake  CMakeLists.txt
src/canvas_root_io/canvas_root_io/: CMakeLists.txt
src/canvas_root_io/tools/: CMakeLists.txt
src/canvas_root_io/ups/: product_deps
src/catch/: CMakeLists.txt  README.md
src/catch/patch/: AddTargets.patch
src/catch/ups/: product_deps
src/cetlib/: CMakeLists.txt
src/cetlib/cetlib/: BasicPluginFactory.cc  BasicPluginFactory.h  CMakeLists.txt  HorizontalRule.h  LibraryManager.cc  LibraryManager.h  MD5Digest.cc  MD5Digest.h  PluginFactory.cc  PluginFactory.h  PluginTypeDeducer.h  ProvideFilePathMacro.h  ProvideMakePluginMacros.h  SimultaneousFunctionSpawner.h  assert_only_one_thread.h  base_converter.cc  base_converter.h  bit_manipulation.h  bold_fontify.h  canonical_number.cc  canonical_number.h  canonical_string.cc  canonical_string.h  coded_exception.h  column_width.cc  column_width.h  compiler_macros.h  container_algorithms.h  cpu_timer.cc  cpu_timer.h  crc32.cc  crc32.h  exception.h  exception_category_matcher.h  exception_collector.h  exception_message_matcher.h  exempt_ptr.h  filepath_maker.cc  filepath_maker.h  filesystem.cc  (+54 more)
src/cetlib/doc/: BasicPluginFactory.notes  LibraryManager.notes  MD5Digest.notes  Ntuple.notes  PluginFactory.notes  PluginTypeDeducer.notes  base_converter.notes  bit_manipulation.notes  canonical_number.notes  canonical_string.notes  coded_exception.notes  column_width.notes  compiler_macros.notes  container_algorithms.notes  cpu_timer.notes  crc32.notes  demangle.notes  detail.notes  exempt_ptr.notes  filepath_maker.notes  fip180-1.htm  getenv.notes  hard_cast.notes  hypot.notes  inc-expand.notes  include.notes  includer.notes  lpad.notes  map_vector.notes  maybe_ref.notes  name_of.notes  no_delete.notes  nybbler.notes  os_libpath.notes  ostream_handle.notes  pow.notes  quiet_unit_test.notes  registry_via_id.h.notes  replace_all.notes  rpad.notes  (+11 more)
src/cetlib/perllib/: CMakeLists.txt  PluginVersionInfo.pm.in  cetskelgen
src/cetlib/ups/: README  product-config.cmake.in  product_deps
src/cetlib_except/: .gitignore  CMakeLists.txt  README
src/cetlib_except/cetlib_except/: CMakeLists.txt  coded_exception.h  demangle.cc  demangle.h  exception.cc  exception.h  exception_collector.cc  exception_collector.h
src/cetlib_except/doc/: exception.notes
src/cetlib_except/ups/: product_deps
src/critic/: CMakeLists.txt  README
src/critic/critic/: CMakeLists.txt
src/critic/ups/: product_deps
src/fhiclcpp/: CMakeLists.txt  README  fhicl-cpp.kdev4
src/fhiclcpp/doc/: fhiclcpp_threading_notes.txt  fhiclcpp_threading_notes_supporting_details.txt
src/fhiclcpp/fhiclcpp/: CMakeLists.txt  DatabaseSupport.cc  DatabaseSupport.h  ParameterSet.cc  ParameterSet.h  ParameterSetID.cc  ParameterSetID.h  ParameterSetRegistry.cc  ParameterSetRegistry.h  ParameterSetWalker.h  Protection.cc  Protection.h  coding.cc  coding.h  exception.cc  exception.h  extended_value.cc  extended_value.h  fwd.h  intermediate_table.cc  intermediate_table.h  make_ParameterSet.cc  make_ParameterSet.h  parse.cc  parse.h  parse_shims.cc  parse_shims.h  parse_shims_opts.h  stdmap_shims.h  tokens.h  type_traits.h
src/fhiclcpp/python/: CMakeLists.txt  fhiclmodule.cc
src/fhiclcpp/tools/: CMakeLists.txt  Printer.h  fhicl-dump.cc  fhicl-expand.cc  fhicl-get.cc  fhicl-write-db.cc
src/fhiclcpp/ups/: product_deps
src/fhiclcpp/xcompile/: CMakeLists.txt  LinuxPPC.cmake  README
src/fhiclpy/: CMakeLists.txt
src/fhiclpy/python/: CMakeLists.txt  fhiclmodule.cc
src/fhiclpy/ups/: product_deps
src/gallery/: .gitignore  CMakeLists.txt  README  summary
src/gallery/gallery/: AssnsBranchData.cc  AssnsBranchData.h  BranchData.cc  BranchData.h  BranchMapReader.cc  BranchMapReader.h  CMakeLists.txt  DataGetterHelper.cc  (+19 more)
src/hep_concurrency/: CMakeLists.txt
src/messagefacility/: CMakeLists.txt  README
src/range/: CMakeLists.txt  README.md
workbook/art-workbook/: CMakeLists.txt
(+1715 files in other folders)
